# PokeAPI

./: .coverage  README.md  arquivo_requirements.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: pokemons.py
app/core/: config.py  database.py
app/crud/: pokemon.py
app/models/: pokemon.py  pokemon_db.py
app/schemas/: pokemon.py
app/services/: pokeapi_service.py
app/utils/: exceptions.py
data/: pokedex.db
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
tests/: conftest.py  test_local_crud.py
tests/test_api/: test_pokemons.py
tests/test_services/: test_pokeapi_service.py
