[project]
name = "pokedex-api"
version = "0.1.0"
description = ""
authors = [
    {name = "balu",email = "daniel.pf.chs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.13,<0.16.0)"
]
